--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container">
         <h2>JSON to Plain Text Converter for LookML Dashboards</h2>
         <p style="font-weight: normal;">- This is a static HTML file and can be used locally.</p>
-        <p style="font-weight: normal;">- Meant for converting JSON Object into a YAML formatting for LookML dashboards in order to assist users that don't have a developer background</p>
+        <p style="font-weight: normal;">- Meant for converting JSON Object into a YAML formatting for LookML dashboards in order to assist users that don't have a developer background.</p>
         <p style="font-weight: normal;">- You may need to remove " and/or - symbols from the first and last line of the converted text for it to work.</p>
         <textarea id="jsonInput" rows="10" placeholder="Paste your JSON text here..."></textarea>
         <button onclick="convertToJson()">Convert to Plain Text</button>
